--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Clifter Slam</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -13,7 +13,7 @@
   <script>
     window.$docsify = {
       name: 'githubpages',
-      repo: 'https://github.com/slowy07/clifter_slam/',
+      repo: 'https://github.com/slowy07/clifter_slam/tree/gitpages',
       loadSidebar: True
     }
   </script>
